--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,12 @@
-h1 {
+* { margin: 0; padding: 0; font-family: 'Secular One', sans-serif; }
+html, body { overflow: hidden; font-family: 'Secular One', sans-serif; }
+
+canvas {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 0;
+  z-index: -1;
+}
+
+h1 {
+  margin: 10px;
 }
