--- a/src/practice02/style.css
+++ b/src/practice02/style.css
@@ -1,2 +1,48 @@
-* { margin: 0; padding: 0; font-family: 'Secular One', sans-serif; }
-html, body { font-family: 'Secular One', sans-serif; }
+* { margin: 0; padding: 0; font-family: 'PT Serif', serif; text-decoration: none; }
+html, body { font-family: 'PT Serif', serif; overflow-x: hidden; }
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 70px;
+}
+
+.header__item {
+  display: flex;
+  align-items: center;
+  justify-content: right;
+
+  height: 70px;
+  margin-right: 20px;
+}
+
+.header__item a {
+  color: #000;
+}
+
+.fv {
+  position: relative;
+  margin-top: 70px;
+  height: calc(100vh - 70px);
+}
+
+.webgl {
+  position: relative;
+  z-index: -1;
+  width: 100%;
+  height: calc(100vh - 70px);
+}
+
+h1 {
+  position: absolute;
+  left: 55%;
+  bottom: 20%;
+  transform: translate(-50%, -50%);
+  font-family: 'PT Serif', serif;
+
+  width: 100%;
+  font-size: 50px;
+  
+}
