--- a/src/task04/style.css
+++ b/src/task04/style.css
@@ -1,3 +1,4 @@
 * { margin: 0; padding: 0; font-family: 'Secular One', sans-serif; }
 html, body { font-family: 'PT Serif', serif; overflow-x: hidden; }
 h1 { margin: 15px; }
+canvas { position: absolute; top: 0; left: 0; z-index: -1; }
