--- a/src/practice04/src/css/style.css
+++ b/src/practice04/src/css/style.css
@@ -3,11 +3,30 @@
   padding: 0;
   font-family: "Secular One", sans-serif;
 }
-html,
-body {
-  overflow-x: hidden;
+canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
 }
 h1 {
   font-size: 2rem;
   margin: 15px;
+}
+.container {
+  width: 80vw;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.item {
+  width: 100%;
+}
+.item:not(:first-of-type) {
+  margin-top: 100px;
+}
+.item img {
+  width: 100%;
+  opacity: 0;
 }
