--- a/src/practice06/src/css/style.css
+++ b/src/practice06/src/css/style.css
@@ -16,3 +16,11 @@ h1 {
   margin: 15px;
   color: #fff;
 }
+img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -2;
+}
