--- a/src/practice07/src/css/style.css
+++ b/src/practice07/src/css/style.css
@@ -3,8 +3,14 @@
   padding: 0;
   font-family: "Secular One", sans-serif;
 }
+
+@font-face {
+	font-family: 'SixCaps';
+	src: url(../font/SixCaps.ttf);
+}
+
 canvas {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
@@ -15,4 +21,11 @@ h1 {
   font-size: 2rem;
   margin: 15px;
   color: #fff;
+}
+
+h2 {
+  font-family: SixCaps;
+  font-size: 60rem;
+  color: #000;
+  opacity: 0.4;
 }
