--- a/src/works15/src/css/style.css
+++ b/src/works15/src/css/style.css
@@ -5,21 +5,19 @@
 }
 canvas {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 0;
 }
 h1 {
   font-size: 2rem;
   margin: 15px;
 }
-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: -2;
+.webgl__wrapper {
+  width: 100%;
+}
+.webgl {
+  width: 350px;
+  height: 500px;
 }
