--- a/src/works16/src/css/style.css
+++ b/src/works16/src/css/style.css
@@ -1,13 +1,38 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Secular One", sans-serif;
 }
-html,body { overflow-x: hidden; }
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+  height: 100vh;
+}
 canvas {
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
 }
-h1 { margin: 15px; font-size: 2rem; }
+h1 {
+  margin: 15px;
+  font-size: 2rem;
+  font-family: "Secular One", sans-serif;
+}
+
+.slider-button {
+  position: absolute;
+  right: 50px;
+  bottom: 50px;
+
+  display: flex;
+  align-items: center;
+  font-size: 1.5rem;
+}
+
+.slider-button span {
+  display: block;
+  width: 100px;
+  cursor: pointer;
+  text-align: center;
+}
