--- a/src/works16/src/css/style.css
+++ b/src/works16/src/css/style.css
@@ -18,6 +18,8 @@ h1 {
   margin: 15px;
   font-size: 2rem;
   font-family: "Secular One", sans-serif;
+  color: #fff;
+  mix-blend-mode: difference;
 }
 
 .slider-button {
@@ -30,7 +32,7 @@ h1 {
   font-size: 1.5rem;
 }
 
-.slider-button span {
+.slider-button button {
   display: block;
   width: 100px;
   cursor: pointer;
