--- a/src/works16/src/css/style.css
+++ b/src/works16/src/css/style.css
@@ -24,17 +24,23 @@ h1 {
 
 .slider-button {
   position: absolute;
-  right: 50px;
-  bottom: 50px;
+  left: 50%;
+  bottom: 5vw;
+  transform: translateX(-50%);
 
   display: flex;
   align-items: center;
-  font-size: 1.5rem;
+  justify-content: center;
+  font-size: 2.5rem;
+  font-family: "Secular One", sans-serif;
+
+  color: #fff;
+  mix-blend-mode: difference;
 }
 
 .slider-button button {
   display: block;
-  width: 100px;
+  width: 180px;
   cursor: pointer;
   text-align: center;
 }
