--- a/src/works17/src/css/style.css
+++ b/src/works17/src/css/style.css
@@ -21,3 +21,17 @@ h1 {
   color: #fff;
   mix-blend-mode: difference;
 }
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.image-item {
+  width: 100%;
+  margin-bottom: 100px;
+}
+.image-item img {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  opacity: 0;
+}
