--- a/src/works17/src/css/style.css
+++ b/src/works17/src/css/style.css
@@ -44,3 +44,11 @@ h1 {
   object-fit: cover;
   opacity: 0;
 }
+@media screen and (max-width:1000px) {
+  .container {
+    margin: 100px 15px;
+  }
+  .image-item {
+    width: 100%;
+  }
+}
