--- a/src/works18/src/css/style.css
+++ b/src/works18/src/css/style.css
@@ -14,7 +14,6 @@ canvas {
   top: 0;
   left: 0;
   z-index: -1;
-  background-color: #333;
 }
 h1 {
   position: fixed;
@@ -59,6 +58,7 @@ h1 {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  opacity: 0;
 }
 .work-list {
   position: relative;
