--- a/src/works19/src/css/style.css
+++ b/src/works19/src/css/style.css
@@ -41,7 +41,7 @@ h1 {
   width: 100%;
   height: 500px;
   object-fit: cover;
-  /* opacity: 0; */
+  opacity: 0;
 }
 @media screen and (max-width:1000px) {
   .container {
