click時にnoiseのアニメーションを発火

--- a/src/works18/src/css/style.css
+++ b/src/works18/src/css/style.css
@@ -20,7 +20,7 @@ h1 {
   margin: 15px;
   font-size: 2rem;
   font-family: "Secular One", sans-serif;
-  color: #fff;
+  color: #000;
   mix-blend-mode: difference;
 }
 .container {
