中心からグラデーション

--- a/src/works20/src/css/style.css
+++ b/src/works20/src/css/style.css
@@ -20,6 +20,6 @@ h1 {
   margin: 15px;
   font-size: 2rem;
   font-family: "Secular One", sans-serif;
-  color: #000;
+  color: #fff;
   mix-blend-mode: difference;
 }
