--- a/src/works21/src/css/style.css
+++ b/src/works21/src/css/style.css
@@ -8,12 +8,13 @@ body {
   width: 100%;
   height: 100vh;
   overscroll-behavior: none;
+  background-color: #000;
 }
 canvas {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: -1;
+  z-index: 1;
 }
 h1 {
   position: fixed;
