--- a/src/works21/src/css/style.css
+++ b/src/works21/src/css/style.css
@@ -30,3 +30,22 @@ h1 {
   object-fit: cover;
   opacity: 0;
 }
+.slider-button {
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
+
+  display: flex;
+  justify-content: space-around;
+
+  width: 100%;
+  padding: 15px;
+}
+.prev,
+.next {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #fff;
+  font-family: "Secular One", sans-serif;
+  cursor: pointer;
+}
