--- a/src/works20/src/css/style.css
+++ b/src/works20/src/css/style.css
@@ -8,12 +8,13 @@ body {
   width: 100%;
   height: 100vh;
   overscroll-behavior: none;
+  background-color: #000;
 }
 canvas {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: -1;
+  z-index: 1;
 }
 h1 {
   position: fixed;
@@ -22,4 +23,29 @@ h1 {
   font-family: "Secular One", sans-serif;
   color: #fff;
   mix-blend-mode: difference;
+}
+.img-wrapper img {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  opacity: 0;
+}
+.slider-button {
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
+
+  display: flex;
+  justify-content: space-around;
+
+  width: 100%;
+  padding: 15px;
+}
+.prev,
+.next {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #fff;
+  font-family: "Secular One", sans-serif;
+  cursor: pointer;
 }
