--- a/src/works21/src/css/style.css
+++ b/src/works21/src/css/style.css
@@ -8,18 +8,50 @@ body {
   width: 100%;
   height: 100vh;
   overscroll-behavior: none;
+  color: #fff;
+  background-color: #333;
 }
 canvas {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
 }
 h1 {
   position: fixed;
   margin: 15px;
   font-size: 2rem;
   font-family: "Secular One", sans-serif;
-  color: #fff;
+  color: #f5f5f5;
   mix-blend-mode: difference;
+}
+
+main {
+  position: relative;
+  z-index: 1;
+}
+.wrapper {
+   margin-top: 150px;
+}
+.title {
+  font-size: 40px;
+  margin-left: 20px;
+  margin-bottom: 20px;
+  font-weight: 600;
+}
+.list {
+  cursor: pointer;
+}
+
+.item {
+  padding: 15px 30px;
+  border-bottom: solid 1px #f5f5f5;
+}
+
+.item-text > span {
+  font-size: 12px;
+}
+
+.item > img {
+  display: none;
 }
