--- a/src/works21/src/css/style.css
+++ b/src/works21/src/css/style.css
@@ -15,7 +15,7 @@ canvas {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 1;
 }
 h1 {
   position: fixed;
@@ -31,7 +31,7 @@ main {
   z-index: 1;
 }
 .wrapper {
-   margin-top: 150px;
+   padding-top: 150px;
 }
 .title {
   font-size: 40px;
