--- a/src/works21/src/css/style.css
+++ b/src/works21/src/css/style.css
@@ -8,7 +8,7 @@ body {
   width: 100%;
   height: 100vh;
   overscroll-behavior: none;
-  color: #fff;
+  color: #f5f5f5;
   background-color: #333;
 }
 canvas {
@@ -46,6 +46,7 @@ main {
 .item {
   padding: 80px 30px;
   border-bottom: solid 1px #f5f5f5;
+  mix-blend-mode: difference;
 }
 
 .item-text > span {
