--- a/src/works21/src/css/style.css
+++ b/src/works21/src/css/style.css
@@ -12,8 +12,8 @@ body {
   width: 100%;
   height: 100vh;
   overscroll-behavior: none;
-  color: #f5f5f5;
-  background-color: #333;
+  color: #D3A955;
+  background-color: #3657BD;
 }
 canvas {
   position: absolute;
@@ -26,8 +26,7 @@ h1 {
   margin: 15px;
   font-size: 2rem;
   font-family: "Secular One", sans-serif;
-  color: #f5f5f5;
-  mix-blend-mode: difference;
+  color: #D3A955;
 }
 
 main {
@@ -38,7 +37,7 @@ main {
   padding-top: 150px;
 }
 .title {
-  font-size: 50px;
+  font-size: 60px;
   margin-left: 20px;
   margin-bottom: 20px;
   font-weight: 600;
@@ -51,7 +50,7 @@ main {
 .item {
   position: relative;
   padding: 80px 30px;
-  border-bottom: dashed 1px #f5f5f5;
+  border-bottom: dashed 2px #D3A955;
   mix-blend-mode: difference;
 }
 
