--- a/src/works22/src/css/style.css
+++ b/src/works22/src/css/style.css
@@ -25,3 +25,22 @@ h1 {
   font-size: 2rem;
   font-family: "Secular One", sans-serif;
 }
+.slider-button {
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
+
+  display: flex;
+  justify-content: space-around;
+
+  width: 100%;
+  padding: 15px;
+}
+.prev,
+.next {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #fff;
+  font-family: "Secular One", sans-serif;
+  cursor: pointer;
+}
