--- a/src/works22/src/css/style.css
+++ b/src/works22/src/css/style.css
@@ -21,6 +21,8 @@ canvas {
 }
 h1 {
   position: fixed;
+  z-index: 2;
+  color: #fff;
   margin: 15px;
   font-size: 2rem;
   font-family: "Secular One", sans-serif;
