wip: scroll webgl

--- a/src/works24/src/css/style.css
+++ b/src/works24/src/css/style.css
@@ -36,8 +36,8 @@ h1 {
   left: 50%;
   transform: translate3d(-50%, -50%, 0);
   display: grid;
-  gap: 1%;
-  grid-template-columns: repeat(auto-fit, calc(calc(300vh / 4) - (3% / 4)));
+  gap: 15px;
+  grid-template-columns: repeat(auto-fit, calc(calc(300vh / 4) - (45px / 4)));
   width: 300vh;
   height: 200vh;
 }
