--- a/src/works25/src/css/style.css
+++ b/src/works25/src/css/style.css
@@ -35,8 +35,8 @@ h1 {
 }
 
 .image__wrapper img {
-  width: 100%;
-  height: 100%;
+  width: 400px;
+  height: 500px;
   object-fit: cover;
   opacity: 0;
 }
