--- a/src/works25/src/css/style.css
+++ b/src/works25/src/css/style.css
@@ -10,6 +10,10 @@ main {
   height: 100vh;
 }
 
+main {
+  position: relative;
+}
+
 canvas {
   position: fixed;
   top: 0;
@@ -35,6 +39,11 @@ h1 {
 }
 
 .image__wrapper img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
   width: 400px;
   height: 500px;
   object-fit: cover;
