--- a/src/works25/src/css/style.css
+++ b/src/works25/src/css/style.css
@@ -27,7 +27,7 @@ canvas {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: -1;
+  z-index: 1;
 }
 
 h1 {
@@ -58,6 +58,11 @@ h1 {
   width: calc(590px / 1.5);
   height: calc(860px / 1.5);
   opacity: 0;
+
+  user-select: none;
+  user-drag: none;
+  -webkit-user-drag: none;
+  -moz-user-select: none;
 }
 
 .text__wrapper {
