--- a/src/works25/src/css/style.css
+++ b/src/works25/src/css/style.css
@@ -1,5 +1,5 @@
 :root {
-  --text-width: 0px
+  --text-width: 0px;
 }
 
 * {
@@ -8,8 +8,8 @@
 }
 
 @font-face {
-	font-family: 'Nacelle';
-	src: url(../fonts/Nacelle-HeavyItalic.otf);
+  font-family: "Nacelle";
+  src: url(../fonts/Nacelle-HeavyItalic.otf);
 }
 
 html,
@@ -53,7 +53,11 @@ h1 {
 }
 
 .card__item {
-
+  cursor: pointer;
+  user-select: none;
+  user-drag: none;
+  -webkit-user-drag: none;
+  -moz-user-select: none;
 }
 
 .card {
@@ -64,23 +68,29 @@ h1 {
 .card img {
   width: 100%;
   opacity: 0;
+
+  user-select: none;
+  user-drag: none;
+  -webkit-user-drag: none;
+  -moz-user-select: none;
 }
 
 .image__wrapper {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: -1;
 
   width: 100%;
   height: 100vh;
 }
 
-.image__wrapper img {
+.image__wrapper div {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  
+
   width: calc(590px / 1.5);
   height: calc(860px / 1.5);
   opacity: 0;
@@ -109,16 +119,36 @@ h1 {
 }
 
 .text__wrapper p {
-  &:nth-child(1) { animation: 20s linear infinite loopText; }
-  &:nth-child(2) { animation: 20s 1s linear infinite loopText; }
-  &:nth-child(3) { animation: 20s 2s linear infinite loopText; }
-  &:nth-child(4) { animation: 20s 3s linear infinite loopText; }
-  &:nth-child(5) { animation: 20s 4s linear infinite loopText; }
-  &:nth-child(6) { animation: 20s 5s linear infinite loopText; }
-  &:nth-child(7) { animation: 20s 6s linear infinite loopText; }
-  &:nth-child(8) { animation: 20s 7s linear infinite loopText; }
-  &:nth-child(9) { animation: 20s 8s linear infinite loopText; }
-  &:nth-child(10) { animation: 20s 9s linear infinite loopText; }
+  &:nth-child(1) {
+    animation: 20s linear infinite loopText;
+  }
+  &:nth-child(2) {
+    animation: 20s 1s linear infinite loopText;
+  }
+  &:nth-child(3) {
+    animation: 20s 2s linear infinite loopText;
+  }
+  &:nth-child(4) {
+    animation: 20s 3s linear infinite loopText;
+  }
+  &:nth-child(5) {
+    animation: 20s 4s linear infinite loopText;
+  }
+  &:nth-child(6) {
+    animation: 20s 5s linear infinite loopText;
+  }
+  &:nth-child(7) {
+    animation: 20s 6s linear infinite loopText;
+  }
+  &:nth-child(8) {
+    animation: 20s 7s linear infinite loopText;
+  }
+  &:nth-child(9) {
+    animation: 20s 8s linear infinite loopText;
+  }
+  &:nth-child(10) {
+    animation: 20s 9s linear infinite loopText;
+  }
 }
 
 @keyframes loopText {
