--- a/src/works25/src/css/style.css
+++ b/src/works25/src/css/style.css
@@ -75,7 +75,7 @@ h1 {
   -moz-user-select: none;
 }
 
-.image__wrapper {
+.modal {
   position: absolute;
   top: 0;
   left: 0;
@@ -85,11 +85,18 @@ h1 {
   height: 100vh;
 }
 
-.image__wrapper div {
+.image__wrapper {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+
+.image__wrapper .pop-up-area {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 1;
 
   width: calc(590px / 1.5);
   height: calc(860px / 1.5);
@@ -99,6 +106,16 @@ h1 {
   user-drag: none;
   -webkit-user-drag: none;
   -moz-user-select: none;
+}
+
+.close {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+
+  width: 100%;
+  height: 100vh;
 }
 
 .text__wrapper {
