--- a/src/works25/src/css/style.css
+++ b/src/works25/src/css/style.css
@@ -126,7 +126,15 @@ h1 {
   z-index: -99;
 }
 
-.text__wrapper p {
+.text__wrapper span {
+  display: block;
+  -webkit-clip-path: inset(100% 0 0 0);
+  clip-path: inset(100% 0 0 0);
+
+  animation: 1s 0.5s ease-out forwards ScaleInText;
+}
+
+.text__wrapper span p {
   line-height: 1;
   font-size: 12vw;
   white-space: nowrap;
@@ -135,44 +143,64 @@ h1 {
   will-change: transform;
 }
 
-.text__wrapper p {
-  &:nth-child(1) {
-    animation: 20s linear infinite loopText;
+.text__wrapper span {
+  &:nth-child(1) p {
+    animation: 100s linear infinite LeftLoopText;
   }
-  &:nth-child(2) {
-    animation: 20s 1s linear infinite loopText;
+  &:nth-child(2) p {
+    animation: 100s linear infinite RightLoopText;
   }
-  &:nth-child(3) {
-    animation: 20s 2s linear infinite loopText;
+  &:nth-child(3) p {
+    animation: 100s linear infinite LeftLoopText;
   }
-  &:nth-child(4) {
-    animation: 20s 3s linear infinite loopText;
+  &:nth-child(4) p {
+    animation: 100s linear infinite RightLoopText;
   }
-  &:nth-child(5) {
-    animation: 20s 4s linear infinite loopText;
+  &:nth-child(5) p {
+    animation: 100s linear infinite LeftLoopText;
   }
-  &:nth-child(6) {
-    animation: 20s 5s linear infinite loopText;
+  &:nth-child(6) p {
+    animation: 100s linear infinite RightLoopText;
   }
-  &:nth-child(7) {
-    animation: 20s 6s linear infinite loopText;
+  &:nth-child(7) p {
+    animation: 100s linear infinite LeftLoopText;
   }
-  &:nth-child(8) {
-    animation: 20s 7s linear infinite loopText;
+  &:nth-child(8) p {
+    animation: 100s linear infinite RightLoopText;
   }
-  &:nth-child(9) {
-    animation: 20s 8s linear infinite loopText;
+  &:nth-child(9) p {
+    animation: 100s linear infinite LeftLoopText;
   }
-  &:nth-child(10) {
-    animation: 20s 9s linear infinite loopText;
+  &:nth-child(10) p {
+    animation: 100s linear infinite RightLoopText;
   }
 }
 
-@keyframes loopText {
+@keyframes ScaleInText {
+  0% {
+    -webkit-clip-path: inset(100% 0 0 0);
+    clip-path: inset(100% 0 0 0);
+  }
+  100% {
+    webkit-clip-path: inset(0);
+    clip-path: inset(0);
+  }
+}
+
+@keyframes LeftLoopText {
   0% {
     transform: translateX(0);
   }
   100% {
     transform: translateX(-100%);
+  }
+}
+
+@keyframes RightLoopText {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
