--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5,7 +5,6 @@
 }
 html,
 body {
-  overflow: hidden;
   font-family: Secular One, sans-serif;
 }
 canvas {
@@ -19,9 +18,22 @@ h1 {
 h2 {
   margin-left: 15px;
 }
-ul {
-  margin-left: 35px;
+.list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
 }
-.wrapper {
-  margin: 10px;
+.item {
+  width: 20%;
+  aspect-ratio: 1 / 1;
+}
+.item-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.item-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
