--- a/src/works26/src/css/style.css
+++ b/src/works26/src/css/style.css
@@ -13,44 +13,15 @@ main {
 }
 
 canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  position: fixed;
   z-index: -1;
 }
 
 h1 {
-  position: fixed;
+  position: absolute;
   top: 0;
   margin: 15px;
   font-size: 2rem;
   font-family: "Secular One", sans-serif;
-  color: #000;
-  mix-blend-mode: difference;
-}
-
-.button-list {
-  position: absolute;
-  right: 2vw;
-  bottom: 2vw;
-
-  display: flex;
-  gap: 15px;
-}
-
-.button-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  width: 5vw;
-  height: 5vw;
-  border-radius: 50%;
-  background-color: #fff;
-}
-
-.button-item button {
-  font-size: 3vw;
+  color: #fff;
 }
