--- a/src/works27/src/css/style.css
+++ b/src/works27/src/css/style.css
@@ -3,6 +3,11 @@
   padding: 0;
 }
 
+@font-face {
+	font-family: 'geki-font';
+	src: url(../font/geki-font.ttf);
+}
+
 html,
 body,
 main {
@@ -13,15 +18,35 @@ main {
 }
 
 canvas {
-  position: fixed;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   z-index: -1;
 }
 
 h1 {
-  position: absolute;
+  position: fixed;
   top: 0;
   margin: 15px;
   font-size: 2rem;
   font-family: "Secular One", sans-serif;
   color: #fff;
+}
+
+.image__wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.image {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  opacity: 0;
+  visibility: hidden;
 }
