--- a/src/works29/src/css/style.css
+++ b/src/works29/src/css/style.css
@@ -3,11 +3,6 @@
   padding: 0;
 }
 
-@font-face {
-	font-family: 'geki-font';
-	src: url(../font/geki-font.ttf);
-}
-
 html,
 body,
 main {
@@ -32,14 +27,28 @@ h1 {
   margin: 15px;
   font-size: 2rem;
   font-family: "Secular One", sans-serif;
-  color: #fff;
 }
 
-.title__wrapper {
-  mix-blend-mode: difference;
+.button-list {
+  position: absolute;
+  right: 2vw;
+  bottom: 2vw;
+
+  display: flex;
+  gap: 15px;
 }
 
-.effect {
-  width: 100%;
-  height: 100svh;
+.button-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 5vw;
+  height: 5vw;
+  border-radius: 50%;
+  background-color: #fff;
+}
+
+.button-item button {
+  font-size: 3vw;
 }
