fix: refactor works04

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -16,6 +16,7 @@ header {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 999;
   padding: 8px;
   mix-blend-mode: difference;
   color: #fff;
