--- a/src/works22/src/css/style.css
+++ b/src/works22/src/css/style.css
@@ -20,17 +20,7 @@ canvas {
   z-index: -1;
 }
 
-h1 {
-  position: fixed;
-  z-index: 1;
-  margin: 15px;
-  font-size: 2rem;
-  font-family: "Secular One", sans-serif;
-  color: #000;
-  mix-blend-mode: difference;
-}
-
-.list {
+.image-list {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -43,12 +33,12 @@ h1 {
   height:  250vh;
 }
 
-.item {
+.image-item {
   width: 100%;
   height: 100%;
 }
 
-.item__img {
+.image-item__img {
   width: 100%;
   height: 100%;
   background-size: cover;
@@ -56,23 +46,23 @@ h1 {
   opacity: 0;
 }
 
-.item:nth-child(1) .item__img {background-image: url('../img/image1.jpg');}
-.item:nth-child(2) .item__img {background-image: url('../img/image2.jpg');}
-.item:nth-child(3) .item__img {background-image: url('../img/image3.jpg');}
-.item:nth-child(4) .item__img {background-image: url('../img/image4.jpg');}
-.item:nth-child(5) .item__img {background-image: url('../img/image5.jpg');}
-.item:nth-child(6) .item__img {background-image: url('../img/image6.jpg');}
-.item:nth-child(7) .item__img {background-image: url('../img/image7.jpg');}
-.item:nth-child(8) .item__img {background-image: url('../img/image8.jpg');}
-.item:nth-child(9) .item__img {background-image: url('../img/image9.jpg');}
-.item:nth-child(10) .item__img {background-image: url('../img/image10.jpg');}
-.item:nth-child(11) .item__img {background-image: url('../img/image11.jpg');}
-.item:nth-child(12) .item__img {background-image: url('../img/image12.jpg');}
-.item:nth-child(13) .item__img {background-image: url('../img/image13.jpg');}
-.item:nth-child(14) .item__img {background-image: url('../img/image14.jpg');}
-.item:nth-child(15) .item__img {background-image: url('../img/image15.jpg');}
-.item:nth-child(16) .item__img {background-image: url('../img/image16.jpg');}
-.item:nth-child(17) .item__img {background-image: url('../img/image17.jpg');}
-.item:nth-child(18) .item__img {background-image: url('../img/image18.jpg');}
-.item:nth-child(19) .item__img {background-image: url('../img/image19.jpg');}
-.item:nth-child(20) .item__img {background-image: url('../img/image20.jpg');}
+.image-item:nth-child(1) .image-item__img {background-image: url('../img/image1.jpg');}
+.image-item:nth-child(2) .image-item__img {background-image: url('../img/image2.jpg');}
+.image-item:nth-child(3) .image-item__img {background-image: url('../img/image3.jpg');}
+.image-item:nth-child(4) .image-item__img {background-image: url('../img/image4.jpg');}
+.image-item:nth-child(5) .image-item__img {background-image: url('../img/image5.jpg');}
+.image-item:nth-child(6) .image-item__img {background-image: url('../img/image6.jpg');}
+.image-item:nth-child(7) .image-item__img {background-image: url('../img/image7.jpg');}
+.image-item:nth-child(8) .image-item__img {background-image: url('../img/image8.jpg');}
+.image-item:nth-child(9) .image-item__img {background-image: url('../img/image9.jpg');}
+.image-item:nth-child(10) .image-item__img {background-image: url('../img/image10.jpg');}
+.image-item:nth-child(11) .image-item__img {background-image: url('../img/image11.jpg');}
+.image-item:nth-child(12) .image-item__img {background-image: url('../img/image12.jpg');}
+.image-item:nth-child(13) .image-item__img {background-image: url('../img/image13.jpg');}
+.image-item:nth-child(14) .image-item__img {background-image: url('../img/image14.jpg');}
+.image-item:nth-child(15) .image-item__img {background-image: url('../img/image15.jpg');}
+.image-item:nth-child(16) .image-item__img {background-image: url('../img/image16.jpg');}
+.image-item:nth-child(17) .image-item__img {background-image: url('../img/image17.jpg');}
+.image-item:nth-child(18) .image-item__img {background-image: url('../img/image18.jpg');}
+.image-item:nth-child(19) .image-item__img {background-image: url('../img/image19.jpg');}
+.image-item:nth-child(20) .image-item__img {background-image: url('../img/image20.jpg');}
