--- a/src/works23/src/css/style.css
+++ b/src/works23/src/css/style.css
@@ -21,6 +21,10 @@ main {
   overflow: hidden;
 }
 
+header {
+  color: #000;
+}
+
 canvas {
   position: fixed;
   top: 0;
@@ -28,16 +32,7 @@ canvas {
   right: 0;
   bottom: 0;
   z-index: -1;
-}
-
-h1 {
-  position: fixed;
-  z-index: 99;
-  margin: 15px;
-  font-size: 2rem;
-  font-family: "Secular One", sans-serif;
-  color: #000;
-  mix-blend-mode: difference;
+  background-color: transparent;
 }
 
 .wrapper {
