--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -42,9 +42,26 @@ header {
 .header__link {
   text-decoration: underline;
 }
-
-h2 {
-  margin-left: 15px;
+.mv {
+  position: relative;
+  padding: 50px;
+}
+.mv__title {
+  font-size: 40px;
+}
+.mv__text {
+  margin-top: 8px;
+  line-height: 1.5;
+}
+.mv__list {
+  position: absolute;
+  top: 60px;
+  right: 50px;
+  display: flex;
+  gap: 16px;
+}
+.mv__link {
+  text-decoration: underline;
 }
 .list {
   display: flex;
@@ -52,8 +69,22 @@ h2 {
   list-style: none;
 }
 .item {
+  position: relative;
   width: 20%;
   aspect-ratio: 1 / 1;
+}
+.item-number {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #000;
+  width: 3.5vw;
+  height: 3.5vw;
+  font-size: 2vw;
+  background-color: #fff;
 }
 .item-link {
   display: flex;
