--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -114,4 +114,19 @@ header {
     height: 10.5vw;
     font-size: 6vw;
   }
+  .--pc-only::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    content: "PC ONLY";
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    font-size: 6.5vw;
+    background-color: #fff;
+    opacity: 0.8;
+  }
 }
