fix: resize canvas size

--- a/src/works30/src/css/style.css
+++ b/src/works30/src/css/style.css
@@ -1,3 +1,19 @@
+.webgl {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  overflow: clip;
+}
+
+.webgl canvas {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+}
+
 .mv {
   display: flex;
   gap: 80px;
