--- a/src/works29/src/css/style.css
+++ b/src/works29/src/css/style.css
@@ -12,6 +12,16 @@ main {
   overflow: hidden;
 }
 
+.webgl {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  overflow: clip;
+}
+
 canvas {
   position: absolute;
   top: 0;
