--- a/src/works30/src/css/style.css
+++ b/src/works30/src/css/style.css
@@ -12,23 +12,22 @@
   position: absolute;
   left: 0px;
   top: 0px;
+  z-index: 1;
 }
 
 .mv {
   display: flex;
-  gap: 80px;
-  padding: 80px;
   width: 100%;
   height: 100vh;
 }
 
-.mv__desc {
-  margin-top: 80px;
-  width: 50%;
-}
-
 .mv__title {
-  font-size: 72px;
+  position: absolute;
+  left: 3vw;
+  bottom: 3vw;
+  z-index: 1;
+  font-size: 10vw;
+  color: #315eff;
 }
 
 .mv__text {
@@ -37,33 +36,4 @@
   gap: 24px;
   margin-top: 40px;
   font-size: 24px;
-}
-
-.mv__text span {
-  display: block;
-}
-
-.mv__slider {
-  width: 50%;
-}
-
-.mv__image {
-  flex-shrink: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0;
-}
-
-.list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-  margin-top: 80px;
-}
-
-.item {
-  width: calc(50% - 8px);
-  aspect-ratio: 3 / 2;
-  opacity: 0;
 }
