--- a/src/works30/src/css/style.css
+++ b/src/works30/src/css/style.css
@@ -1,3 +1,13 @@
+
+@font-face {
+	font-family: 'Montserrat-Bold';
+	src: url(../fonts/Montserrat-Bold.ttf);
+}
+
+body {
+  font-family: 'Montserrat-Bold';
+}
+
 .webgl {
   position: absolute;
   top: 0;
@@ -21,20 +31,55 @@
   height: 100vh;
 }
 
-.mv__title {
+.mv__desc {
   position: absolute;
-  left: 3vw;
-  bottom: 3vw;
+  top: 50%;
+  transform: translateY(-50%);
   z-index: 1;
-  font-size: 10vw;
-  color: #315eff;
-  opacity: 0.2;
+  line-height: 1;
 }
 
-.mv__text {
+.mv__title {
+  font-size: 10vw;
+  opacity: 0;
+}
+
+.mv__title span {
+  display: block;
+  width: fit-content;
+  line-height: 1;
+  font-family: Montserrat-Bold;
+}
+
+.mv__image {
+  position: absolute;
+  top: 50%;
+  right: 10%;
+  transform: translateY(-50%);
+  z-index: 1;
+
+  width: 30vw;
+  height: 40vw;
+}
+
+.mv__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+/* .mv__text {
   display: flex;
   flex-direction: column;
   gap: 24px;
   margin-top: 40px;
   font-size: 24px;
+  opacity: 0;
 }
+
+.mv__text span {
+  display: block;
+  width: fit-content;
+  line-height: 0.5;
+} */
